--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.dot {
+  /* diameter of the circle */
+  --d: 3px;
+  background: radial-gradient(
+      circle at var(--d) var(--d),
+      #a7a7a7 calc(var(--d) - 1px),
+      #0000 var(--d)
+    )
+    0 0 / 30px 30px;
+}
